--- a/Jailbreak/style.css
+++ b/Jailbreak/style.css
@@ -18,7 +18,7 @@
             font-family: "Myriad Pro";
         }
         .Background {
-            background: url("background.png") no-repeat;
+            background: url("background.jpg") no-repeat;
             position: fixed;
             left: 0px;
             top: 0px;
